--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='new.css') }}">
+    
 </head>
 <body>
    <h1>Login in system in flask</h1> 
