--- a/templates/register.html
+++ b/templates/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>register</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='t41.css') }}">
 </head>
 <body>
     <h1>Register page</h1>
