--- a/templates/register.html
+++ b/templates/register.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>register</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='t41.css') }}">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Register Donation</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/register.css') }}">
 </head>
 <body>
-    <h1>Register page</h1>
+    <div class="register-container">
+        <h2>Donate Food</h2>
+        <form method="POST">
+            {{ form.hidden_tag() }}
 
-    <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        
-        <p>{{ form.event_name.label }} {{ form.event_name() }}</p>
-        <p>{{ form.food_type.label }} {{ form.food_type() }}</p>
-        <p>{{ form.event_date.label }} {{ form.event_date() }}</p>
-        <p>{{ form.location.label }} {{ form.location() }}</p>
-        <p>{{ form.contact_info.label }} {{ form.contact_info() }}</p>
-        
-        <p>{{ form.submit() }}</p>
-    </form>
-    
-    <a href="{{url_for('login')}}">Already have an account!!Login </a><br>
+            <div class="form-group">
+                {{ form.event_name.label }}
+                {{ form.event_name(class_="form-control") }}
+            </div>
+
+            <div class="form-group">
+                {{ form.food_type.label }}
+                {{ form.food_type(class_="form-control") }}
+            </div>
+
+            <div class="form-group">
+                {{ form.event_date.label }}
+                {{ form.event_date(class_="form-control") }}
+            </div>
+
+            <div class="form-group">
+                {{ form.location.label }}
+                {{ form.location(class_="form-control") }}
+            </div>
+
+            <div class="form-group">
+                {{ form.contact_info.label }}
+                {{ form.contact_info(class_="form-control") }}
+            </div>
+
+            {{ form.submit(class_="submit-btn") }}
+        </form>
+
+        <p class="login-link">Already registered? <a href="{{ url_for('login') }}">Login</a></p>
+    </div>
 </body>
 </html>
