--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,4 @@
- old homepage)
-
-html
-Copy
-Edit
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
@@ -34,7 +29,7 @@ Edit
     </main>
 
     <footer>
-        <p>&copy; 2025 Food Donation Platform</p>
+        <p>&copy;Food Donation Platform</p>
     </footer>
 </body>
 </html>
