--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Welcome to My GitHub Pages Site</h1>
-  <p><a href="templates/homenew.html">Go to Home Page</a></p>
+  <p><a href="homenew.html">Go to Home Page</a></p>
 </body>
 </html>
